# aoc_cpp_template

./: .gitignore  CMakeLists.txt  generateDays.py
templates/: CMakeLists.txt  part1.cpp
utils/: Logger.cpp  Logger.h  Matrix.h  utils.cpp  utils.h
